# boundra

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  boundra.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: pull-request-template.md
.github/workflows/: boundra.yml  release.yml
apps/dogfood/: package.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  output.rs  parsing.rs  util.rs
crates/cli/src/commands/: add-dependency.rs  check-boundaries.rs  create-domain.rs  create_domain.rs  generate.rs  graph-domains.rs  init.rs  mod.rs
crates/cli/tests/: check-boundaries.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/parser/: Cargo.toml
crates/rules/: Cargo.toml
docs/: architecture.md  boundary-rules.md  ci-integration.md  cli-install.md  cli-spec-v1.md  config-spec.md  contract-schema-spec.md  diagnostic-spec.md  dogfooding-notes.md  domain-manifest-spec.md  framework-surface.md  glossary.md  implementation-plan-mvp.md  naming-convention.md  next-steps.md  packaging-spec.md  project-charter.md  quickstart.md  readme.md  release-checklist.md  roadmap.md  solo-convention.md  vite-integration.md
docs/adr/: 0001-domain-first-architecture.md  0002-schema-contract-runtime.md  0003-public-packaging.md  0004-single-npm-package.md  0005-app-boundary-and-runtime-issues.md  0006-single-command-cli.md  0007-development-error-overlay.md
scripts/: check-release-notes.mjs  check-release-version.mjs  reject-root-publish.mjs  verify-clean-room.mjs
(+29 files in other folders)
