[workspace]
members = [
  "crates/core",
  "crates/parser",
  "crates/rules",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Boundra Team"]
repository = "https://github.com/qtaghdi/boundra"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
