[package]
name = "boundra-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
boundra-core = { path = "../core" }
boundra-parser = { path = "../parser" }
boundra-rules = { path = "../rules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "boundra"
path = "src/main.rs"
