[package]
name = "boundra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain boundary analyzer and code generator for Boundra"

[dependencies]
boundra-core = { path = "../core" }
boundra-parser = { path = "../parser" }
boundra-rules = { path = "../rules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "boundra"
path = "src/main.rs"
